--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+body{
+  font-family: 'Poppins', sans-serif;
+}
 
 .App-header {
   background-color: #282c34;
@@ -35,4 +38,205 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  color: #558fc7;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #558fc7 transparent #558fc7 transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.headerApp{
+  width: 100%;
+  height: 8vh;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid silver;
+}
+.headerTitle {
+  margin-left: 10px;
+  color: #558fc7;
+  text-decoration: none;
+}
+.podcastScreen{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap:10px;
+  width: 100%;
+  min-width: 100%;
+  margin-top: 20px;
+  justify-content: center;
+}
+.containerPodcastDetail {
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+.columnInfoDetail{
+  width: 30%;
+  display: flex;
+  height: 92vh;
+  justify-content: center;
+  align-items: center;
+}
+.containerSidebar{
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 8px;
+  padding-top: 20px;
+}
+.cardInfoDetail {
+  padding: 20px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 80%;
+}
+.table{
+  text-align: left;
+  border-color: 1px solid silver;
+  font-size: 15px;
+  width: 100%;
+} 
+  table {
+  width: 100%;
+  height: 6vh;
+  border-radius: 8px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+th, td {
+  border: 1px solid silver;
+  padding: 10px;
+}
+.columAudioInfo{
+  width: 70%;
+  display: flex;
+  padding-top: 30px;
+  align-items: center;
+  flex-direction: column;
+}
+.episodeContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.episodeContainer{
+  width: 70%;
+}
+.cardEpisode{
+  width: 80%;
+  padding: 20px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border-radius: 8px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  height: auto;
+}
+.boldFont{
+  font-weight: bold;
+  color: #558fc7;
+}
+.cardAudioInfo{
+  width: 90%;
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+}
+.imgDetail{
+  width: 250px;
+  border-radius: 8px;
+}
+.cardPodcast{
+  width: 20%;
+  border-radius: 8px;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.cardPodcast img{
+  border-radius: 8px;
+}
+.titlePodcastList {
+  color: black;
+  text-decoration: none;
+}
+.searchContainer{
+  width: 100%;
+  height: 8vh;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 20px;
+}
+.searchContainer input {
+  width: 20%;
+  margin: 20px 30px 20px 0px;
+  height: 7vh;
+  border: 1px solid silver;
+  border-radius: 8px;
+  padding: 0px 0px 0px 10px;
+  text-decoration: none;
+}
+.responseLength{
+  padding: 8px;
+  margin-right: 10px;
+  border-radius: 8px;
+  background-color: #558fc7;
+  color: white;
+}
+.descriptionSidebar {
+  font-size: 14px;
+  width: 80%;
+  text-align: left;
+}
+.infoPrincipal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 25px;
+}
+.loginScreen{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loginButton{ 
+  text-decoration: none;
+  width: 10%;
+  height: 7vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
